--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,6 @@
 h2 {
 font: bold 30px Arial, sans-serif;
 background-color: wheat;
-width: fit-content;
-display: flex;
-justify-content: center;
-align-items: center;
+padding-left: 20px;
+width: 220px;
 }
